--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -229,6 +229,7 @@
       <p>Congratulations! Your app is running. 🎉</p>
       <p>{{ Description }}</p>
       <p>{{ SecondDescription }}</p>
+      <p>{{ ThirdDescription }}</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
